--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
-    implementation project(":custom-alert")
+    implementation 'com.github.MH-projects:CustomAlert:1.0.0'
 }
